--- a/MSpaceInvaders/MSpaceInvaders/MSpaceInvaders.csproj
+++ b/MSpaceInvaders/MSpaceInvaders/MSpaceInvaders.csproj
@@ -60,17 +60,20 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Game.cs" />
+    <Compile Include="Gift.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ship.cs" />
+    <Compile Include="Star.cs" />
     <Compile Include="StartForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="StartForm.Designer.cs">
       <DependentUpon>StartForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Upgrade.cs" />
     <EmbeddedResource Include="ControlsForm.resx">
       <DependentUpon>ControlsForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -144,6 +147,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\computer_key_Arrow_Right_T.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\bg.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\New Piskel.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\computer_key_Esc.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\upgradebox.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\computer_key_Space_bar_T.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
